--- a/Bloxstrap/UI/Elements/Bootstrapper/SynapseXDialog.xaml
+++ b/Bloxstrap/UI/Elements/Bootstrapper/SynapseXDialog.xaml
@@ -15,7 +15,7 @@
         Background="#1B1B1B"
         Closing="UiWindow_Closing">
     <Grid>
-        <TextBlock Margin="111,241,-27,6" Panel.ZIndex="1" TextAlignment="Center" FontSize="10" Foreground="#757575" Text="Copyright © 2016-2024 Synapse Softworks LLC. All rights reserved" FontFamily="{StaticResource Rubik}" FontWeight="UltraLight"/>
+        <TextBlock Margin="111,241,-27,6" Panel.ZIndex="1" TextAlignment="Center" FontSize="10" Foreground="#757575" Text="Ride the Wave." FontFamily="{StaticResource Rubik}" FontWeight="UltraLight"/>
         <TextBlock Margin="0,216,0,31" Panel.ZIndex="1" TextAlignment="Center" FontSize="12" Foreground="#757575" Text="{Binding Message, Mode=OneWay}" Width="450" FontFamily="{StaticResource Rubik}" FontWeight="UltraLight"/>
         <ProgressBar IsIndeterminate="{Binding ProgressIndeterminate, Mode=OneWay}" Foreground="#ADDCE8" Background="#1b1b1b" Maximum="{Binding ProgressMaximum, Mode=OneWay}" Value="{Binding ProgressValue, Mode=OneWay}" Margin="-5,210,-5,25" Height="25"/>
         <Rectangle Fill="#121212" Margin="0,235,0,0"></Rectangle>
